test: 시뮬레이션 로직 보완
- 월별 통계로 통일
- 회원 1000명을로 증량
- 매수 매도 결정 로직 보완